добавлен фримейкер для автора